# Samara_HSD

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  fetchCMSIS.cmake
Samara_HSD/: CMakeLists.txt
Samara_HSD/MIMXRT1062/: CMakeLists.txt
Samara_HSD/MIMXRT1062/halDrivers/: ADC.h  CMakeLists.txt  I2C.c  UART.c  time.cpp
Samara_HSD/MIMXRT1062/include/: GPIO.h  IOMUX.h  time.hpp
Samara_HSD/MIMXRT1062/src/: ADC.c  UART.c  teensy41PinInfo.c
Samara_HSD/MIMXRT1062_HSD/: CMakeLists.txt  README.md
Samara_HSD/MIMXRT1062_HSD/include/public/: PWM.h  teensy41PinInfo.h
Samara_HSD/MIMXRT1062_HSD/private/include/: evkmimxrt1060_flexspi_nor_config.h  fsl_flexspi_nor_boot.h
Samara_HSD/MIMXRT1062_HSD/private/src/: mimxrt1062_startup.c
Samara_HSD/MIMXRT1062_HSD/public/include/: mimxrt1062_dma.h  mimxrt1062_usart.h  pinInfo.h
Samara_HSD/MIMXRT1062_HSD/public/linker/: MIMXRT1062.ld  MIMXRT1062_library.ld  MIMXRT1062_memory.ld  samara_mimxrt1062.ld
Samara_HSD/MIMXRT1062_HSD/public/src/: PWM.c  mimxrt1062_dma.c
Samara_HSD/lib/: CMakeLists.txt
Samara_HSD/public/include/: ssd_dma.h
drivers/halDrivers/: CMakeLists.txt  CmakeLists.txt  GPIO.c  GPIO.h  I2C.c  I2C.h  IOMUX.c  IOMUX.h  PWM.c  UART.c  UART.h  pinInfo.h  time.cpp  time.hpp
tests/teensy/: CMakeLists.txt  testDMA.c  testGPIO.c  testStartup.c  toolchain.cmake
tests/teensy/boot/: CMakeLists.txt
tests/teensy/boot/include/: fsl_flexspi_nor_boot.h
tests/teensy/boot/src/: fsl_flexspi_nor_boot.c
tests/teensy/linker/: MIMXRT1062_EVK_Debug.ld  MIMXRT1062_EVK_Debug_memory.ld
tests/teensy/startup/: CMakeLists.txt
tests/teensy/startup/src/: startup_mimxrt1062.cpp  system_MIMXRT1062.c
